--- a/fonts.css
+++ b/fonts.css
@@ -2,3 +2,8 @@
     font-family: "FugazOne";
     src: url("assets/FugazOne-Regular.ttf") format("truetype");
   }
+  @font-face {
+    font-family: "Ropa";
+    src: url("assets/RopaSans-Regular.ttf") format("truetype");
+  }
+  
